# rubin

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
geymsla-client/: Cargo.toml
geymsla-client/src/: lib.rs  main.rs
geymsla-lib/: Cargo.toml
geymsla-lib/src/: errors.rs  lib.rs  parser.rs  store.rs
geymsla-server/: Cargo.toml
geymsla-server/src/: client.rs  main.rs
rubin/: CHANGELOG.md  Cargo.toml
rubin-cli/: Cargo.toml  README.md
rubin-cli/src/: cli.rs  main.rs
rubin-client/: Cargo.toml
rubin-client/src/: lib.rs  main.rs
rubin-lib/: Cargo.toml
rubin-lib/src/: errors.rs  lib.rs  main.rs  persistence.rs  store.rs
rubin-lib/src/net/: parser.rs
rubin-lib/src/store/: mod.rs
rubin-lib/src/store/persistence/: file_handling.rs  mod.rs
rubin-server/: Cargo.toml
rubin-server/src/: client.rs  lib.rs  main.rs  server.rs
rubin/src/: lib.rs
rubin/src/errors/: mod.rs
rubin/src/net/: parser.rs
rubin/src/net/client/: mod.rs
rubin/src/net/server/: mod.rs
rubin/src/store/mem/: mod.rs
rubin/src/store/persistence/: file_handling.rs  mod.rs
rubin/tests/: net.rs
src/: lib.rs
src/errors/: mod.rs
src/net/: mod.rs  parser.rs
src/net/client/: mod.rs
src/net/server/: mod.rs
src/store/: mod.rs
src/store/inner_stores/: mod.rs  string_store.rs
src/store/mem/: mod.rs
src/store/persistence/: file_handling.rs  mod.rs
tests/: net.rs
