[package]
name = "rubin-cli"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition =  "2021"

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }

[dependencies.rubin]
version = "0.3.0"
path = "../rubin"

[[bin]]
name = "rubin"
path = "src/main.rs"


